# ClaudeInLove

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  claudepad.md  pyproject.toml
docs/: counter_tactics.md
scripts/: review_flagged.py  setup_persona.py  start_signal.sh  stats.py  test_messenger.py  test_openrouter.py  test_signal.py
src/: __init__.py
src/beacons/: __init__.py  callback_server.py  database.py  models.py  token_generator.py
src/core/: config.py  database.py  main_loop.py  models.py  stats.py
src/llm/: __init__.py  chatgpt_client.py  context_manager.py  openrouter_client.py  prompt_builder.py
src/persona/: __init__.py  facebook_scraper.py  persona_builder.py
src/safety/: __init__.py  content_guard.py  human_review.py  suspicion_checker.py
src/utils/: browser.py  logging.py
tests/: conftest.py  test_content_guard.py  test_context_manager.py  test_database.py  test_human_review.py  test_main_loop.py  test_models.py  test_persona_builder.py  test_prompt_builder.py  test_signal_client.py  test_stats.py  test_suspicion_checker.py
