[project]
name = "claudeinlove"
version = "0.1.0"
description = "Scam-baiter tool that wastes romance scammers' time with AI-powered responses"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.0",
    "fake-useragent>=1.4.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "rich>=13.0.0",
    "flask>=3.0.0",
    "requests>=2.31.0",
]

[project.scripts]
claudeinlove = "src.core.main_loop:main"
beacon-server = "src.beacons.callback_server:run_server"
create-beacon = "src.beacons.token_generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
